--- a/tests/collect-logs.yaml
+++ b/tests/collect-logs.yaml
@@ -6,6 +6,7 @@
 
     - name: Ensure journald logs directory exists
       file:
+        mode: 0755
         path: "{{ __log_dir }}"
         state: directory
 
