--- a/tests/playbooks/pre.yaml
+++ b/tests/playbooks/pre.yaml
@@ -26,3 +26,19 @@
         dest: /etc/pip.conf
         regexp: ^extra-index-url
         state: absent
+
+    - name: Execute bindep role
+      include_role:
+        name: bindep
+      vars:
+        bindep_profile: ansible test
+
+    - name: Setup ensure-tox role
+      include_role:
+        name: ensure-tox
+      vars:
+        ensure_global_symlinks: true
+
+    - name: Use the latest version of pip
+      become: true
+      shell: python3 -m pip install -U pip
