--- a/tests/playbooks/run.yaml
+++ b/tests/playbooks/run.yaml
@@ -308,6 +308,48 @@
           - _zuul_web_service_systemd_stat.stat.gr_name == 'root'
           - _zuul_web_service_systemd_stat.stat.mode == '0644'
 
+    - name: Register /etc/zuul/ssl/zookeeper-cacert.pem
+      stat:
+        path: /etc/zuul/ssl/zookeeper-cacert.pem
+      register: _zuul_file_zookeeper_tls_cacert_stat
+
+    - name: Assert _zuul_file_zookeeper_tls_cacert_stat tests.
+      assert:
+        that:
+          - _zuul_file_zookeeper_tls_cacert_stat.stat.exists
+          - _zuul_file_zookeeper_tls_cacert_stat.stat.isreg
+          - _zuul_file_zookeeper_tls_cacert_stat.stat.pw_name == 'zuul-test'
+          - _zuul_file_zookeeper_tls_cacert_stat.stat.gr_name == 'zuul-test'
+          - _zuul_file_zookeeper_tls_cacert_stat.stat.mode == '0644'
+
+    - name: Register /etc/zuul/ssl/zookeeper-client.pem
+      stat:
+        path: /etc/zuul/ssl/zookeeper-client.pem
+      register: _zuul_file_zookeeper_tls_cert_stat
+
+    - name: Assert _zuul_file_zookeeper_tls_cert_stat tests.
+      assert:
+        that:
+          - _zuul_file_zookeeper_tls_cert_stat.stat.exists
+          - _zuul_file_zookeeper_tls_cert_stat.stat.isreg
+          - _zuul_file_zookeeper_tls_cert_stat.stat.pw_name == 'zuul-test'
+          - _zuul_file_zookeeper_tls_cert_stat.stat.gr_name == 'zuul-test'
+          - _zuul_file_zookeeper_tls_cert_stat.stat.mode == '0644'
+
+    - name: Register /etc/zuul/ssl/zookeeper-client.key
+      stat:
+        path: /etc/zuul/ssl/zookeeper-client.key
+      register: _zuul_file_zookeeper_tls_key_stat
+
+    - name: Assert _zuul_file_zookeeper_tls_key_stat tests.
+      assert:
+        that:
+          - _zuul_file_zookeeper_tls_key_stat.stat.exists
+          - _zuul_file_zookeeper_tls_key_stat.stat.isreg
+          - _zuul_file_zookeeper_tls_key_stat.stat.pw_name == 'zuul-test'
+          - _zuul_file_zookeeper_tls_key_stat.stat.gr_name == 'zuul-test'
+          - _zuul_file_zookeeper_tls_key_stat.stat.mode == '0600'
+
     - name: Ensure zuul-executor is running.
       become: yes
       shell: /usr/sbin/service zuul-executor status
