Switch to -f (foreground) for systemd files
-d will be removed in the next version of zuul.

Change-Id: Icbc6e0b6b82d5d7cb544d223614e741219b70fad
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/templates/etc/systemd/system/zuul-merger.service
+++ b/templates/etc/systemd/system/zuul-merger.service
@@ -6,7 +6,7 @@ After=syslog.target network.target
 Type=simple
 Group=zuul
 User=zuul
-ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-merger -d
+ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-merger -f
 ExecStop={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-merger stop
 
 [Install]
