--- a/templates/etc/systemd/system/zuul-executor.service
+++ b/templates/etc/systemd/system/zuul-executor.service
@@ -6,7 +6,7 @@ After=syslog.target network.target
 Type=simple
 Group=zuul
 User=zuul
-ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-executor -d
+ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-executor -f
 ExecStop={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-executor stop
 
 [Install]
