--- a/templates/etc/systemd/system/zuul-fingergw.service
+++ b/templates/etc/systemd/system/zuul-fingergw.service
@@ -6,7 +6,7 @@ After=syslog.target network.target
 Type=simple
 Group=root
 User=root
-ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-fingergw -d
+ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-fingergw -f
 ExecStop={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-fingergw stop
 
 [Install]
