--- a/templates/etc/systemd/system/zuul-scheduler.service
+++ b/templates/etc/systemd/system/zuul-scheduler.service
@@ -6,7 +6,7 @@ After=syslog.target network.target
 Type=simple
 Group=zuul
 User=zuul
-ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-scheduler -d
+ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-scheduler -f
 ExecStop={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-scheduler stop
 ExecReload=/bin/kill -HUP $MAINPID
 
