--- a/templates/etc/zuul/zuul.conf
+++ b/templates/etc/zuul/zuul.conf
@@ -7,6 +7,9 @@ server = 127.0.0.1
 
 [zookeeper]
 hosts = localhost:2181
+tls_ca = /etc/zuul/ssl/zookeeper-cacert.pem
+tls_cert = /etc/zuul/ssl/zookeeper-client.pem
+tls_key = /etc/zuul/ssl/zookeeper-client.key
 
 [gearman_server]
 listen_address = 127.0.0.1
@@ -42,7 +45,11 @@ zuul_url = 127.0.0.1
 [web]
 log_config = /etc/zuul/web-logging.conf
 listen_address = 127.0.0.1
+root = http://localhost:9000
 
 [connection database]
 driver = sql
 dburi = mysql+pymysql://zuul:secret@127.0.0.1/zuul
+
+[keystore]
+password = MY_SECRET_PASSWORD
