Initial database support
This adds a database connection for testing, which will be required in
4.0+.

Change-Id: I3c9ba6aac023a0018d857bd3d34f54cdc26e4b79
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -18,6 +18,7 @@
     nodeset: ubuntu-bionic
     vars:
       zuul_pip_version: 3.19.1
+      zuul_pip_name: zuul[mysql_reporter]
 
 # Testing for zuul_install_method: git
 - job:
