--- a/templates/etc/zuul/zuul.conf
+++ b/templates/etc/zuul/zuul.conf
@@ -42,3 +42,7 @@ zuul_url = 127.0.0.1
 [web]
 log_config = /etc/zuul/web-logging.conf
 listen_address = 127.0.0.1
+
+[connection database]
+driver = sql
+dburi = mysql+pymysql://zuul:secret@127.0.0.1/zuul
