Use full-reconfigure to reload zuul-scheduler
Depends-On: https://review.opendev.org/c/windmill/windmill/+/798005
Change-Id: Ia1c9af51f4e0d1032ae844b7c97f37841c3ffcef
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/templates/etc/systemd/system/zuul-scheduler.service
+++ b/templates/etc/systemd/system/zuul-scheduler.service
@@ -8,7 +8,7 @@ Group=zuul
 User=zuul
 ExecStart={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-scheduler -f
 ExecStop={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-scheduler stop
-ExecReload=/bin/kill -HUP $MAINPID
+ExecReload={{ zuul_pip_virtualenv | default('/usr/local') }}/bin/zuul-scheduler full-reconfigure
 
 [Install]
 WantedBy=multi-user.target
